[metadata]
name = cropyieldpackage
version = 1.0.0
author = RABHI Yasser
author_email = yesser.rabhi@gmail.com
description = ML crop yield predicition
long_description = ML Project for crop yield predicition based on GIEC climate change scenarios
url = https://github.com/YasserRabhi/
keywords = 
	Machine Learning
	Tensorflow
	Sklearn
	Python

[options]
python_requires = >=3.7, <4
install_requires = 
	pandas
	geopandas
	tensorflow
	glob
	numpy
	sklearn

[options.extras_require]
test =
	pytest

[options.package_data]
final_data =
	./input.final_data.csv